force-app/main/default/objects/Lilly_Scientific_Congress__c/Lilly_Scientific_Congress__c.object-meta.xml
<CustomObject>
    <label>Scientific Congress</label>
    <nameField>
        <displayFormat>SC-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scientific Congress</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>