force-app/main/default/objects/Lilly_Scientific_Congress__c/fields/H1_HCP_Id__c.field-meta.xml
<CustomField>
    <fullName>H1_HCP_Id__c</fullName>
    <formula>Lilly_Account__r.Lilly_H1_HCP_Id__c</formula>
    <label>H1 HCP</label>
    <type>Text</type>
</CustomField>