force-app/main/default/objects/Lilly_Scientific_Congress__c/fields/Lilly_Conference_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Conference_Name__c</fullName>
    <label>Conference Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>