force-app/main/default/objects/Lilly_Scientific_Congress__c/fields/Lilly_Description__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>