force-app/main/default/objects/Lilly_Scientific_Congress__c/fields/Lilly_Presented_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Presented_Date__c</fullName>
    <label>Presented Date</label>
    <type>Date</type>
</CustomField>