force-app/main/default/objects/Lilly_Scientific_Congress__c/fields/Lilly_Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>