force-app/main/default/objects/Lilly_Scientific_Congress__c/fields/Lilly_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>