force-app/main/default/objects/Lilly_Scientific_Congress__c/fields/Lilly_Title__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Title__c</fullName>
    <label>Title</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>