force-app/main/default/objects/Lilly_Scientific_Congress__c/fields/Lilly_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Poster</fullName>
            </value>
            <value>
                <fullName>Session</fullName>
            </value>
            <value>
                <fullName>Symposia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>