force-app/main/default/objects/Lilly_Scientific_Congress__c/fields/Modified_Role__c.field-meta.xml
<CustomField>
    <fullName>Modified_Role__c</fullName>
    <label>Modified Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Presenter</fullName>
            </value>
            <value>
                <fullName>Co-presenter</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Scientific Committee Member</fullName>
            </value>
            <value>
                <fullName>Local Committee Member</fullName>
            </value>
            <value>
                <fullName>Organizing Committee Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>