force-app/main/default/objects/Lilly_Scientific_Congress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lilly_Account__c</columns>
    <columns>Lilly_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>